--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,19 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '12'
+      - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+        aws-region: us-west-2
       - name: npm install
         env:
           CI: true
         run:  |
           npm ci
+      - name: deploy
+        run: 
+          npx ncc build index.ts
+          zip --j deploy.zip ./index.js
+          aws lambda update-function-code --function-name=lambda-github-action-temp --zip-file=fileb://deploy.zip
