--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.72",
