--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: '12'
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
-        with:
+        # with:
         # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
         # aws-region: us-west-2
