--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
         run:  |
           npm ci
       - name: deploy
-        run: 
+        run: |
           npx ncc build index.ts
+          zip -j deploy.zip ./index.js
           aws lambda update-function-code --function-name=lambda-github-action-temp --zip-file=fileb://deploy.zip
